--- a/curso.html
+++ b/curso.html
@@ -114,7 +114,7 @@
 
                 </div>
 
-                <div class="twoblock">
+                <div class="twoblock2">
 
                     <h2>Aula 3</h2>
 
