--- a/cursos.html
+++ b/cursos.html
@@ -93,7 +93,7 @@
 
             <div class="block">
 
-                <div class="oneblock">
+                <div class="oneblock2">
 
                     <img class="banner" src="./img/ilustra-independencia.png" alt="">
 
